brat/test/golden/error/fanin-list.brat.golden
Error in test/golden/error/fanin-list.brat@FC {start = Pos {line = 2, col = 5}, end = Pos {line = 2, col = 13}}:
f = { [\/] }
    ^^^^^^^^

  Type error: Fanin ([\/]) only applies to Vec

